# kpowa-server

./: .env.sample  Cargo.toml  README.md
config/: base.yaml
migrations/: 20230923110850_create_users_table.sql  20230925173441_add_created_on_to_user.sql
src/: app.rs  config.rs  lib.rs  main.rs  repository.rs
src/domain/: errors.rs  events.rs  fields.rs  mod.rs  model.rs
src/routes/: auth.rs  event.rs  mod.rs  user.rs
src/utils/: jwt.rs
