[package]
name = "kpower-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = { version = "0.6.20", features = ["headers"] }
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.4.0", features = ["serde", "v4"]}
serde_json = "1.0"
rspc = {version = "0.1.3", features = ["axum"] }
sqlx = { version = "0.6.3", features = ["macros", "postgres", "uuid", "migrate", "runtime-tokio-rustls", "offline"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15.0"
rand = "0.8.5"
futures = "0.3.28"
tokio-stream = "0.1.14"
tower-http = { version = "0.4.4", features = ["cors"] }
async-stream = "0.3.5"
jsonwebtoken = "8.3.0"
